Fix Odamex startup commands